Implementación inicial de categoriasp por id

--- a/api-digitalbackend/src/main/resources/application.properties
+++ b/api-digitalbackend/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
+spring.port=8988
 spring.datasource.data=classpath:data.sql
